sizing grid poster secrion

--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,6 @@ body {
 }
 
 .site-nav .active {
-  display: inline-block;
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: var(--akcent-color);
   text-decoration: none;
 }
@@ -140,30 +137,34 @@ body {
   text-align: center;
   color: var(--white);
   background: var(--baner-bcg-color);
-  outline: 1px solid red;
 
-  font-weight: 900;
-  font-size: 44px;
   text-align: center;
-  line-height: 1.4;
-  letter-spacing: 0.06em;
 }
 /*button style poster section*/
 .poster-title {
   margin-top: 0px;
   margin-bottom: 30px;
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  letter-spacing: 0.06em;
+
+  text-transform: uppercase;
 }
 .button {
   padding: 10px 32px;
+  min-width: 136px;
   background: var(--akcent-color);
   color: var(--white);
 
   font-family: inherit;
   font-size: 16px;
   line-height: 1.9;
+  border: 1px solid var(--akcent-color);
+  border-radius: 4px;
 
   align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
 }
 
