--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ body {
   margin-left: auto;
   outline: 2px solid yellowgreen;
 }
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 .list {
   list-style: none;
   padding: 0px;
@@ -168,6 +173,7 @@ body {
   letter-spacing: 0.06em;
 
   text-transform: uppercase;
+  /* стили для кнопки заказать услугу */
 }
 .button {
   padding: 10px 32px;
@@ -245,7 +251,11 @@ body {
   margin-right: 30px;
 }
 
-.command .title {
+.item-command .title {
+  margin-top: 0px;
+  margin-bottom: 10 px;
+  padding-top: 30px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -255,6 +265,9 @@ body {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .comand-list p {
+  margin: 0px;
+  padding-bottom: 30px;
+
   color: var(---text-color);
   font-weight: 400;
   font-size: 16px;
