--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,9 @@ body {
 .item-servise:nth-child(3n) {
   margin-right: 0px;
 }
+.item-servise:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
 
 /*portfolio service*/
 .list-service a {
@@ -370,7 +373,7 @@ body {
 .title-service {
   margin-top: 0px;
   margin-bottom: 4px;
-  padding: 0px 24px;
+  padding: 20px 24px 0px;
 
   color: var(--title-color);
   font-weight: 700;
@@ -380,6 +383,7 @@ body {
 }
 .list-service .text {
   margin: 0px;
+  padding: 0px 24px 20px;
 
   color: var(--text-color);
 
