change color in border

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body {
 .page-header {
   padding-top: 25px;
   padding-bottom: 25px;
-  border-bottom: 1px solid color(--border-header);
+  border-bottom: 1px solid var(--border-header);
 }
 
 .page-header .flexbox {
