--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,7 @@ body {
   line-height: 1.2;
 }
 .asdress {
+  margin: 0px;
   flex-direction: column;
 }
 .foter-container .footer-link {
@@ -302,7 +303,7 @@ body {
   margin-bottom: 0px;
 }
 .adress .paragraph {
-  margin-top: 0;
+  margin: 0px;
 
   color: var(--white);
   font-style: normal;
