--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,7 @@ body {
 }
 .container {
   width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -56,8 +55,7 @@ body {
 }
 /*style for section*/
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 94px 0;
 }
 
 /*style for title*/
@@ -84,7 +82,7 @@ body {
   line-height: 1.2;
 }
 .page-header {
-  padding-top: 25px;
+  padding: 25px 0;
   padding-bottom: 25px;
   border-bottom: 1px solid var(--border-header);
 }
@@ -104,8 +102,7 @@ body {
 }
 
 .site-nav .link {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 0;
 
   color: var(--title-color);
   text-decoration: none;
@@ -149,8 +146,7 @@ body {
 
 .poster-section {
   /*poster style*/
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding: 200px 0;
   text-align: center;
   color: var(--white);
   background: var(--baner-bcg-color);
@@ -186,9 +182,18 @@ body {
 }
 
 /*style for advantage section*/
-
+.advantage {
+  padding-bottom: 0px;
+}
 .advantage-title {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0px;
+  padding: 0px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .list-advantage {
   flex-wrap: wrap;
@@ -214,8 +219,7 @@ body {
 
 .paragraph-adv {
   color: var(--text-color);
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin: 0;
 
   font-weight: 400;
   line-height: 1.7;
@@ -238,17 +242,24 @@ body {
   background: var(--gray-bcg-color);
 }
 .item-command:nth-child(4n) {
-  margin-bottom: 0px;
+  margin-right: 0px;
 }
 .item-command {
   width: calc((100% - 30px * 3) / 4);
   margin-right: 30px;
+  background-color: var(--white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+/* padding for comands name and profeccion */
+.comander-container {
+  padding: 30px 0;
 }
 
 .item-command .title {
   margin-top: 0px;
   margin-bottom: 10 px;
-  padding-top: 30px;
 
   font-weight: 500;
   font-size: 16px;
@@ -259,8 +270,7 @@ body {
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .comand-list p {
-  margin: 0px;
-  padding-bottom: 30px;
+  margin: 0;
 
   color: var(---text-color);
   font-weight: 400;
@@ -290,7 +300,7 @@ body {
   line-height: 1.2;
 }
 .asdress {
-  margin: 0px;
+  margin: 0;
   flex-direction: column;
 }
 .foter-container .footer-link {
@@ -298,7 +308,7 @@ body {
   margin-bottom: 0px;
 }
 .adress .paragraph {
-  margin-bottom: 0px;
+  margin: 0;
 
   color: var(--white);
   font-style: normal;
@@ -356,8 +366,8 @@ body {
 }
 .item-servise {
   width: calc((100% - 30px * 2) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
+  margin: 0 30px;
+
   border: 1px solid var(--border-portfolio);
 }
 
@@ -367,7 +377,9 @@ body {
 .item-servise:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-
+.servise-container {
+  padding: 20px 24px;
+}
 /*portfolio service*/
 .list-service a {
   text-decoration: none;
@@ -376,8 +388,6 @@ body {
 .title-service {
   margin-top: 0px;
   margin-bottom: 4px;
-  padding: 20px 24px 0px;
-
   color: var(--title-color);
   font-weight: 700;
   font-size: 14px;
@@ -386,7 +396,6 @@ body {
 }
 .list-service .text {
   margin: 0px;
-  padding: 0px 24px 20px;
 
   color: var(--text-color);
 
