--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,8 @@ body {
 }
 .item-servise {
   width: calc((100% - 30px * 2) / 3);
-  margin: 0 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
 
   border: 1px solid var(--border-portfolio);
 }
